# mozilla-django-oidc

./: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  sonar-project.properties  tox.ini
.circleci/: README.md  config.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codecov.yml  integration_tests.yml  release.yml  unit_tests.yml
docs/: Makefile  conf.py  drf.rst  index.rst  installation.rst  settings.rst  usage.rst  xhr.rst
integration_tests/: docker-compose.yml  integration_tests.py  run.sh
mozilla_django_oidc/: _jose.py  auth.py  constants.py  middleware.py  test.py  urls.py  utils.py  views.py
mozilla_django_oidc/contrib/: drf.py
mozilla_django_oidc/contrib/auth0/: middleware.py  utils.py
requirements/: requirements.txt  requirements_dev.txt  requirements_test.txt
tests/: namespaced_urls.py  settings.py  test_auth.py  test_contrib_drf.py  test_middleware.py  test_oidc_client.py  test_utils.py  test_views.py
tests/auth0_tests/: test_middleware.py  test_utils.py
